# mike

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_WALTHROUGH.md  LICENSE  LOCAL_SETUP.md  MANUAL_FOLLOW_UP.md  Makefile  NOTICE  README.md  REMEDIATION_PLAN.md  SECURITY.md  TECHDEBT.md  TECH_DUE_DILIGENCE.md  THIRD_PARTY_NOTICES.md  compose.override.yaml.example  compose.yaml  compose.yml  docker-compose.yml  package-lock.json  package.json  pkulaw-mcp-integration-doc.md  playwright.config.ts  skills-lock.json  tsconfig.base.json  tsconfig.json
.githooks/: audit-grace.cjs  audit-known.json  pre-push
.github/: CODEOWNERS  codeql-config.yml  dependabot.yml  pull_request_template.md
airgapped/: Caddyfile  OPERATIONS.md  README.md  docker-compose.airgapped.yml  docker-compose.test.yml  gateway.conf
artifacts/: sbom-backend.json  sbom-frontend.json
backend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  Dockerfile.prod  drizzle.config.ts  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  schema.sql  stryker.config.json  tsconfig.json  vitest.config.mts  vitest.config.ts  vitest.coverage.config.ts
config/: ross-brand.json  (+6 more)
sdks/python/: README.md  pyproject.toml
sdks/python/mike/: __init__.py  _client.py  _exceptions.py  _models.py  _streaming.py
sdks/python/mike/resources/: __init__.py  chat.py  documents.py  projects.py  tabular.py  user.py  workflows.py
sdks/python/tests/: test_auth.py  test_client.py
(+1136 files in other folders)
