[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mike-sdk"
version = "0.1.0"
description = "Python SDK for the Mike legal AI API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["mike"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
